--- a/templates/node_exporter.service.j2
+++ b/templates/node_exporter.service.j2
@@ -3,6 +3,8 @@ Description=Prometheus Node Exporter
 
 [Service]
 Type=simple
+User={{ node_exporter_user }}
+Group={{ node_exporter_group }}
 ExecStart={{ node_exporter_install_dir }}/node_exporter
 Restart=always
 
